<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/localhost_portvalue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/edit_local_host_port1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/port"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <Button
                    android:id="@+id/but_test_localhost_port1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_local_port_ip"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_portvalue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/edit_open_port1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/port"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <Button
                    android:id="@+id/but_test_open_port1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_open_port_ip"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/localhost_portvalue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/edit_local_host_port2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/port"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <Button
                    android:id="@+id/but_test_localhost_port2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_local_port_ip"
                    android:textAllCaps="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_portvalue"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <EditText
                    android:id="@+id/edit_open_port2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/port"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normal_text_size" />

                <Button
                    android:id="@+id/but_test_open_port2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_open_port_ip"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/but_open_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_now" />

    <Button
        android:id="@+id/but_close_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/close_now" />

</LinearLayout>